package Player;

public class animations_enum {
    public final static int walk = 0;
    public final static int run = 1;
    public final static int jump = 2;
    public final static int fall = 3;
    public final static int dash = 4;
    public final static int idle = 5;
    public final static int idle_crouch = 6;
    public final static int walk_crouch = 7;
    public final static int death = 8;
}