@startuml

title __PLAYER's Class Diagram__\n

  namespace Player {
    class Player.Player {
        - animations : Animation[]
        - facing : boolean
        - height : int
        - img : BufferedImage
        + Player()
        + getBounds()
        + getCurrentAnimation()
        + getInAnimation()
        + isFacing()
        + mapCollision()
        + render()
        + setCurrentAnimation()
        + setFacing()
        + setHeight()
        + tick()
    }
  }
  

  namespace Player {
    class Player.animations_enum {
        {static} + dash : int
        {static} + death : int
        {static} + fall : int
        {static} + idle : int
        {static} + idle_crouch : int
        {static} + jump : int
        {static} + run : int
        {static} + walk : int
        {static} + walk_crouch : int
    }
  }
  

  Player.Player -up-|> GameObject.GameObject
  Player.Player o-- SpriteSheet.Animation : currentAnimation
  Player.Player o-- ChestiiRandom.MutableBoolean : inAnimation
  Player.Player o-- Player.States.PlayerState : state


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
